@@ -1,3 +1,10 @@
+2012-09-09  Kostas Nakos  <knakos@gmail.com>
+* android/*: More UI fine tuning, new dialog for cartridge type selection
+* afile.c, cartridge.[ch], ui.c: Moved cartridge types' descriptive text to
+  a more central (reusable) location, hooked android port when a cartridge
+  type cannot be detected.
+
+
 2012-09-08  Kostas Nakos  <knakos@gmail.com>
 * android/*: UI fine tuning, soft keyboard fix for jelly bean
 
